--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "axios": "^0.19",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
+        "flickity": "^2.2.1",
+        "flickity-fullscreen": "^1.1.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
